--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -9,12 +9,15 @@ runtime:
         - sodium
         - ctype
         - iconv
+        - pdo_pgsql
         
+relationships:
+    database: "db:postgresql"
 
-#variables:
-#    php:
-#        # uncomment on PHP 7.4+
-#        #opcache.preload: /app/config/preload.php
+variables:
+    php:
+        # uncomment on PHP 7.4+
+        opcache.preload: /app/config/preload.php
 
 build:
     flavor: none
