Configure redis sessions

--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -4,6 +4,7 @@ type: php:7.4
 
 runtime:
     extensions:
+        - redis
         - apcu
         - mbstring
         - sodium
@@ -13,6 +14,7 @@ runtime:
         
 relationships:
     database: "db:postgresql"
+    redis: "rediscache:redis"
 
 variables:
     php:
